# wavelib

./: CMakeLists.txt
src/: wavelib.c  wtmath.c
